--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@types/node": "^16.4.0",
 		"better-sqlite3": "^7.4.3",
 		"console-stamp": "^3.0.3",
+		"ejs": "^3.1.6",
+		"express": "^4.17.2",
 		"file-type": "^16.5.3",
 		"ip": "^1.1.5",
 		"minimist": "^1.2.5",
