--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
 		"allowJs": false,
 		"alwaysStrict": true,
 		"noUnusedLocals": true,
-		"noUnusedParameters": true
+		"noUnusedParameters": false
 	}
 }
