--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"file-type": "^16.5.3",
 		"ip": "^1.1.5",
 		"minimist": "^1.2.5",
-		"promise-socket": "^7.0.0"
+		"promise-socket": "^7.0.0",
+		"winston": "^3.5.1"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
